# movefile-node

./: .gitignore  Cargo.toml  README.md  package.json
lib/: index.js  index.ts
movefile/: Cargo.toml
movefile/src/: lib.rs
movefile/src/platform/: gio.rs  win.rs
nonstd/: Cargo.toml
nonstd/src/: lib.rs
nonstd/src/platform/: mod.rs
nonstd/src/platform/linux/: clipboard.rs  fs.rs  gio.rs  shell.rs
nonstd/src/platform/windows/: clipboard.rs  drag_drop.rs  fs.rs  shell.rs  util.rs
src/: lib.rs
test/: index.html  main.js  main.ts  preload.js  renderer.js  tsconfig.json
