[package]
name = "movefile_node"
version = "0.1.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
name = "movefile_node"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
movefile = "0.1.0"
once_cell = "1.19.0"
async-std = "1.13.0"

[dependencies.neon]
version = "1"

[patch.crates-io]
movefile = { path = "./movefile" }

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
